# Prezicerea-Umiditatii-Solului

./: Despre proiect pe scurt.txt  README.md  cod.ipynb  main.py  pyproject.toml
Dataset/: data_0.nc  downloaddataset.py  soil_data.nc
